# asips-satpy-readers

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
satpy_viirs_l2/: __init__.py  viirs_l2.py
satpy_viirs_l2/etc/colormaps/: cloud_effective_radius_ice.csv  cloud_effective_radius_water.csv  cloud_optical_thickness_ice.csv  cloud_optical_thickness_water.csv  integer_cloud_mask.csv  mod33_brightness_temperature.csv
satpy_viirs_l2/etc/composites/: viirs.yaml
satpy_viirs_l2/etc/enhancements/: generic.yaml  viirs.yaml
satpy_viirs_l2/etc/readers/: aerdb_l2.yaml  aerdt_l2.yaml  cldmsk_l2.yaml  cldprop_l2.yaml  viirs_l2.yaml
