[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "satpy-viirs-l2"
description = "Satpy Plugin for ASIPS product colormaps and enhancements."
dynamic = ["version"]
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.8"
authors = [
 { name="Will Sharpe", email="wsharpe2@wisc.edu" },
]
dependencies = [
    "satpy",
    "netCDF4",
    "jupyterlab",
]

[tool.hatch.build.targets.sdist]
include = [
  "/satpy_viirs_l2",
]

[tool.hatch.version]
path = "satpy_viirs_l2/version.py"

[tool.hathc.env.ci]
dependencies = [
 "pip-tools",
]

[tool.hatch.envs.lint]
dependencies = [
"black ~=23.1",
]

[tool.black]
target-version = ["py310"]
line-length = 120

[project.entry-points."satpy.enhancements"]
example_enhancements = "satpy_viirs_l2"

[project.entry-points."satpy.composites"]
example_composites = "satpy_viirs_l2"

[project.entry-points."satpy.readers"]
example_readers = "satpy_viirs_l2"

[tool.hatch.metadata]
allow-direct-references = true

